# banking-transaction-analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  test.json
api/: README.md  main.py  pyproject.toml  schemas.py  test_api.py
api/docs/: Fraud_Detection_Presentation.pptx
docs/: slide_deck_content.md
notebooks/: 01_eda.ipynb  01_eda_executed.ipynb  02_anomaly_detection.ipynb  02_anomaly_detection_executed.ipynb
