[project]
name = "fraud-detection-api"
version = "0.1.0"
description = "FastAPI inference service for bank transaction anomaly detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.0",
    "scikit-learn>=1.3,<1.8",
    "pandas>=2.0",
    "numpy>=1.24",
    "joblib>=1.3",
]
